other-cel/ensure-readonly-hostpath/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: ensure-readonly-hostpath
policies:
- ../ensure-readonly-hostpath.yaml
resources:
- good-pod-01.yaml
- bad-pod-01.yaml
results:
- kind: Pod
  policy: ensure-readonly-hostpath
  resources:
  - bad-pod-01
  result: fail
  rule: ensure-hostpaths-readonly
- kind: Pod
  policy: ensure-readonly-hostpath
  resources:
  - good-pod-01
  result: pass
  rule: ensure-hostpaths-readonly
